# PlanningDelaunator

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: cmake-single-platform.yml
config/: urinay.yaml
include/modules/: Visualization.hpp  WayComputer.hpp
include/structures/: Node.hpp  Point.hpp  Trace.hpp  Way.hpp
include/utils/: Params.hpp  Time.hpp
launch/: urinay_launch.py
src/: main.cpp
src/modules/: Visualization.cpp  WayComputer.cpp
src/structures/: Node.cpp  Point.cpp  Trace.cpp  Way.cpp
src/utils/: Params.cpp  Time.cpp
