<?xml version="1.0"?>
<package format="2">
  <name>urinay</name>
  <version>1.0.0</version>
  <description>The ultimate track limits + centerline using a Delaunay triangulation and Oriol's magic.</description>

  <license>GPLv3</license>

  <maintainer email="origovi2000@gmail.com">Oriol Gorriz</maintainer>
  <author email="origovi2000@gmail.com">Oriol Gorriz</author>

  <doc_depend>doxygen</doc_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>mmr_base</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>Eigen3</depend>

  
  <export>
   <build_type>ament_cmake</build_type>
</export>
</package>
